--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -1,6 +1,6 @@
 
 
-@import 'src/main/less/highlight_default.less';
+@import 'src/main/less/highlight_default.less'; 
 @import 'src/main/less/specs.less';
 @import 'src/main/less/auth.less';
 
@@ -76,7 +76,7 @@
   }
 
   #header {
-    background-color: #89bf04;
+    background-color: #7bbce7;
     padding: 9px 14px 19px 14px;
     height: 23px;
     min-width: 775px;
@@ -156,7 +156,7 @@
     content: "-";
   }
 
-  .swagger-expand:before {
+  .swagger-expand:before  {
     content: "+";
   }
 
